--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="/img/icon-love-64.png" type="image/x-icon">
     <title>GÖKMEN NİŞANCI</title>
 </head>
@@ -699,7 +699,7 @@
 
 
 
-        <script src="/js/main.js"></script>
+        <script src="./main.js"></script>
 </body>
 
 </html>
