--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="/img/icon-love-64.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icon-love-64.png" type="image/x-icon">
     <title>GÖKMEN NİŞANCI</title>
 </head>
 
@@ -46,7 +46,7 @@
             <div class="icon-desktop">
 
                 <a href="#profile-pop-up" id="openPorfile">
-                    <img src="/img/icon-administrator-male-64.png" alt="">
+                    <img src="./img/icon-administrator-male-64.png" alt="">
                     <span>Gökmen Nişancı</span>
                 </a>
             </div>
@@ -55,32 +55,32 @@
             <div class="icon-desktop">
 
                 <a href="#github-pop-up" id="openGithub">
-                    <img src="/img/icon-github-64.png" alt="">
+                    <img src="./img/icon-github-64.png" alt="">
                     <span>Github</span>
                 </a>
             </div>
             <div class="icon-desktop">
                 <a href="#linkedin-pop-up" id="openLinkedin">
-                    <img src="/img/icon-linkedin-64.png" alt="">
+                    <img src="./img/icon-linkedin-64.png" alt="">
                     <span>Linkedin</span>
                 </a>
             </div>
             <div class="icon-desktop">
-                <a href="#githubsponsors-pop-up" id="openSponsors"><img src="/img/icon-love-64.png" alt=""><span>Github
+                <a href="#githubsponsors-pop-up" id="openSponsors"><img src="./img/icon-love-64.png" alt=""><span>Github
                         Sponsors</span></a>
             </div>
             <div class="icon-desktop">
-                <a href="#mail-pop-up" id="openMail"><img src="/img/icon-mail-64.png" alt=""><span>Mail</span></a>
+                <a href="#mail-pop-up" id="openMail"><img src="./img/icon-mail-64.png" alt=""><span>Mail</span></a>
             </div>
 
             <div class="icon-desktop">
-                <a href="#whatsapp-pop-up" id="openWhatsapp"><img src="/img/icon-whatsapp-64.png"
+                <a href="#whatsapp-pop-up" id="openWhatsapp"><img src="./img/icon-whatsapp-64.png"
                         alt=""><span>Whatsapp</span></a>
             </div>
 
 
             <div class="icon-desktop">
-                <a href="#instagram-pop-up" id="openInstagram"><img src="/img/icon-instagram-64.png"
+                <a href="#instagram-pop-up" id="openInstagram"><img src="./img/icon-instagram-64.png"
                         alt=""><span>Instagram</span></a>
             </div>
 
