--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
             <div class="icon-desktop">
-                <a href="#pdf-pop-up" id="openPdfl"><img src="/img/icon-pdf-64.png" alt=""><span>CV</span></a>
+                <a href="#pdf-pop-up" id="openPdfl"><img src="./img/icon-pdf-64.png" alt=""><span>CV</span></a>
             </div>
 
 
