--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 
 
                         </div>
-                        <iframe src="/page/CV GÖKMEN NİŞANCI.pdf" frameborder="0" width="100%" height="720px"></iframe>
+                        <iframe src="./page/CV GÖKMEN NİŞANCI.pdf" frameborder="0" width="100%" height="720px"></iframe>
 
 
 
