--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
                 <a href="#tabs" id="tabs-windows"></a>
                 <a href="#" class="px"></a>
                 <a href="#folder" id="folder" class="border"></a>
-                <a href="#chrome-pop-up" id="chrome" class="border"></a>
+                <a href="#chrome-pop-up" id="openChrome" class="border"></a>
 
                 <a href="#github-pop-up" id="openGithub" class="border"></a>
 
 
-                <a href="#linkedin-pop-up" id="openGithub" class="border"></a>
-                <a href="#githubsponsors-pop-up" id="openGithub" class="border"></a>
-                <a href="#mail-pop-up" id="openGithub" class="border"></a>
-                <a href="#whatsapp-pop-up" id="openGithub" class="border"></a>
-                <a href="#instagram-pop-up" id="openGithub" class="border"></a>
-                <a href="#pdf-pop-up" id="openGithub" class="border"></a>
-                <a href="#profile-pop-up" id="openGithub" class="border"></a>
+                <a href="#linkedin-pop-up" id="openLinkedin" class="border"></a>
+                <a href="#githubsponsors-pop-up" id="openGithubSponsors" class="border"></a>
+                <a href="#mail-pop-up" id="openMail" class="border"></a>
+                <a href="#whatsapp-pop-up" id="openWhatsapp" class="border"></a>
+                <a href="#instagram-pop-up" id="openInstagram" class="border"></a>
+                <a href="#pdf-pop-up" id="openPdf class="border"></a>
+                <a href="#profile-pop-up" id="openProfile" class="border"></a>
 
 
             </div>
